--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,300;1,500;1,600&display=swap");
+
 html {
   box-sizing: border-box;
   margin: 0;
@@ -6,5 +8,45 @@ html {
 
 body {
   min-height: 100vh;
-  background: dodgerblue;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+}
+.title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 3rem;
+  letter-spacing: 0.5rem;
+}
+
+.loader {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.loader img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.image-container {
+  margin: 10px 30%;
+}
+.image-container > a > img {
+  width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .title {
+    font-size: 2rem;
+  }
+  .image-container {
+    margin: 10px 0;
+  }
 }
